# Spyware-Server

./: .gitignore  Pipfile  README.md  build_run.ps1  build_run.sh  requirements.txt  setup.cfg
src/spyware_server/: __main__.py  example.py
src/spyware_server/amqp/: __main__.py
src/spyware_server/consumers/: authentication.py  keylogging.py  screenshots.py
src/spyware_server/models/: access.py  target.py
src/spyware_server_common/: config.py  utils.py
src/spyware_server_scripts/: __main__.py  add_access.py  commands.py  init_db.py
