[metadata]
name = spyware_server
description = A Server program for a spyware logs
author = ELASRI Abderrahmane
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
packages = 
    spyware_server
python_requires = >=3.6
package_dir =
    =src
zip_safe = no